--- a/SIENI/SIENI-web/src/main/webapp/view/rpt/reporteParticipacionClases/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/rpt/reporteParticipacionClases/index.xhtml
@@ -5,70 +5,64 @@
                 xmlns:p="http://primefaces.org/ui"
                 template="/WEB-INF/template.xhtml">
     <ui:define name="breadCrumb">
-        <p:breadCrumb>
+        <p:breadCrumb class="Container90">
             <p:menuitem value="Home" url="/"/>
             <p:menuitem value="Reportes" url="#"/>
             <p:menuitem value="Reporte de Participacion de Clases" url="#{siteUrls.reporteParticipacionClases}"/>
-
             <p:separator />
         </p:breadCrumb>
+        <i class="icon-question Fs25 Red Container2 ui-breadcrumb" style="cursor: pointer;" onclick="PF('dlgAyuda').show();"></i>
+        <p:dialog widgetVar="dlgAyuda" modal="true" appendTo="@(body)" header="Ayuda">
+            <p:outputLabel value="Esta ayuda sirve un monton"/>
+        </p:dialog>
     </ui:define>
     <ui:define name="content">
-        <p:tabView>
-            <p:tab title="Reporte de Participacion de Clases">
-                <h:form>
-                    <p:dialog widgetVar="dlgAyuda" modal="true" appendTo="@(body)" header="Ayuda">
-                        <p:outputLabel value="Esta ayuda sirve un monton"/>
-                    </p:dialog>
-                    <i class="icon-question Fs25 Red" style="cursor: pointer" onclick="PF('dlgAyuda').show();"></i>
-                    <div class="EmptyBox20"></div>
-                    <p:panelGrid columns="4">
-                        <p:outputLabel value="Fecha desde"></p:outputLabel>
-                        <p:inputText value="#{formatoPantallas.fecha}"></p:inputText>
-                        <p:outputLabel value="hasta:"></p:outputLabel>
-                        <p:inputText value="#{formatoPantallas.fecha}"></p:inputText>
-                    </p:panelGrid>
-                    <div class="EmptyBox20"></div>
-                    <p:dataTable rows="10" var="car" value="#{clasesForm.plantillas}" 
-                                 paginator="false"
-                                 paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
-                                 rowsPerPageTemplate="10,20,40"
-                                 reflow="true">
-                        <p:column headerText="Alumno" >
-                            #{formatoPantallas.campo100}
-                        </p:column>
-                        <p:column headerText="Curso" >
-                            #{formatoPantallas.campo50}
-                        </p:column>
-                        <p:column headerText="Total de Clases" >
-                            #{formatoPantallas.numero2}
-                        </p:column>
-                        <p:column headerText="Clases Recibidas" >
-                            #{formatoPantallas.numero2}
-                        </p:column>
-                        <p:column headerText="% Participacion" >
-                            #{formatoPantallas.porcentaje}
-                        </p:column>
-                        <f:facet name="footer">
-                            Promedio Total de Particioacion de Clases #{formatoPantallas.porcentaje}
-                        </f:facet>
-                    </p:dataTable>
-                    <div class="EmptyBox20"></div>
-                    <div class="TexAlCenter">
-                        <h:panelGrid columns="4" class="TexAlCenter" style="margin-bottom:10px" cellpadding="5">
-                            <p:outputLabel value="Exportar a:"></p:outputLabel>
-                            <p:selectOneRadio  id="console" value="#{radioView.console}">
-                                <f:selectItem itemLabel="Excel" itemValue="Excel" />
-                                <f:selectItem itemLabel="PDF" itemValue="PDF" />
-                            </p:selectOneRadio>
-                            <p:commandButton  value="Generar"></p:commandButton>
-                            <p:commandButton value="Refrescar"></p:commandButton>
-                        </h:panelGrid>
-                    </div>
-                </h:form>
-            </p:tab>
-
-        </p:tabView>
+        <div class="EmptyBox5"></div>
+        <h:form>
+            <p:panel>
+                <p:panelGrid columns="5">
+                    <p:outputLabel for="desde" value="F. Desde: " class=" Responsive"></p:outputLabel>
+                    <p:calendar class="Container100" id="desde" value="#{rptParticipacionController.desde}" mindate="#{dateUtils.fechaMinima}" maxdate="#{dateUtils.fechaActual}" mask="99/99/9999" pattern="dd/MM/yyyy" required="true" requiredMessage="Debe ingresar fecha de inicio" placeholder="dd/mm/yyyy" yearRange="c-20:c+20" navigator="true"></p:calendar>
+                    <p:outputLabel for="hasta" value="F. Hasta: " class=" Responsive"></p:outputLabel>
+                    <p:calendar class="Container100" id="hasta" value="#{rptParticipacionController.hasta}" mindate="#{dateUtils.fechaMinima}" maxdate="#{dateUtils.fechaActual}" mask="99/99/9999" pattern="dd/MM/yyyy" required="true" requiredMessage="Debe ingresar fecha de fin" placeholder="dd/mm/yyyy" yearRange="c-20:c+20" navigator="true"></p:calendar>
+                    <p:commandButton value="generar" actionListener="#{rptParticipacionController.fill()}" update="consulta" ajax="true"></p:commandButton>
+                </p:panelGrid>
+                <div class="EmptyBox20"></div>
+                <p:dataTable id="consulta"  var="car" value="#{rptParticipacionController.listDatos}" 
+                             paginator="false"
+                             reflow="true">    
+                    <p:column headerText="Alumno" >
+                        #{car.alumno}
+                    </p:column>
+                    <p:column headerText="Curso" >
+                        #{car.curso}
+                    </p:column>
+                    <p:column headerText="Total de Clases" >
+                        #{car.totalClases}
+                    </p:column>
+                    <p:column headerText="Clases Recibidas" >
+                        #{car.clasesRecibidas}
+                    </p:column>
+                    <p:column headerText="% Participacion" >
+                        #{car.participacion}
+                    </p:column>
+                    <f:facet name="footer">
+                        Promedio Total de Participacion de Clases #{rptParticipacionController.totalTransacciones}
+                    </f:facet>
+                </p:dataTable>
+                <div class="EmptyBox20"></div>
+                <div class="TexAlCenter">
+                    <h:panelGrid columns="4" class="TexAlCenter" style="margin-bottom:10px" cellpadding="5">
+                        <p:outputLabel value="Exportar a:"></p:outputLabel>
+                        <p:selectOneRadio  id="console" value="#{rptParticipacionController.tipoRpt}">
+                            <f:selectItem itemLabel="Excel" itemValue="2" />
+                            <f:selectItem itemLabel="PDF" itemValue="0" />
+                        </p:selectOneRadio>
+                        <p:commandButton  value="Generar" ajax="false" actionListener="#{rptParticipacionController.generarReporte()}"></p:commandButton>
+                        <p:commandButton value="Refrescar" actionListener="#{rptParticipacionController.refresh()}" update="consulta" ajax="true"></p:commandButton>
+                    </h:panelGrid>
+                </div>
+            </p:panel>
+        </h:form>
     </ui:define>
-
 </ui:composition>
