--- a/SIENI/SIENI-web/src/main/webapp/resources/reportes/rtpDocentes.jrxml
+++ b/SIENI/SIENI-web/src/main/webapp/resources/reportes/rtpDocentes.jrxml
@@ -47,14 +47,9 @@
 				<reportElement x="110" y="50" width="40" height="20" uuid="8505d060-dbc4-422d-afcc-1c25c03e8c8c"/>
 				<text><![CDATA[Desde:]]></text>
 			</staticText>
-			<textField>
-				<reportElement x="449" y="7" width="80" height="20" uuid="93583e3c-92bc-43fa-81e1-09cda41bee25"/>
-				<textElement textAlignment="Right"/>
-				<textFieldExpression><![CDATA["Pág. "+$V{PAGE_NUMBER}+" of"]]></textFieldExpression>
-			</textField>
 			<textField evaluationTime="Report">
-				<reportElement x="530" y="7" width="40" height="20" uuid="25ed0a8f-fcb5-404a-9104-576653ec13a7"/>
-				<textFieldExpression><![CDATA[" " + $V{PAGE_NUMBER}]]></textFieldExpression>
+				<reportElement x="527" y="4" width="40" height="12" uuid="25ed0a8f-fcb5-404a-9104-576653ec13a7"/>
+				<textFieldExpression><![CDATA[$V{PAGE_NUMBER}+" of " + $V{PAGE_NUMBER}]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement x="527" y="19" width="100" height="20" uuid="fc3eb40b-6b2e-47ed-b0d2-11cbcc092063"/>
@@ -71,6 +66,10 @@
 			<staticText>
 				<reportElement x="262" y="50" width="34" height="20" uuid="e5d279f2-6e18-4e6c-8118-05416760ef3f"/>
 				<text><![CDATA[Hasta:]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="493" y="4" width="34" height="15" uuid="fb4533cb-fa2f-4732-8252-354888d36afb"/>
+				<text><![CDATA[Pág.]]></text>
 			</staticText>
 		</band>
 	</title>
