--- a/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionClase/claseInteractiva/configurar.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionClase/claseInteractiva/configurar.xhtml
@@ -23,7 +23,8 @@
                                     {name: _self.id + '_dragId', value: ui.draggable.attr('id')},
                                     {name: _self.id + '_dropId', value: _self.cfg.target},
                                     {name: ui.draggable.attr('id') + '_left', value: ui.position.left},
-                                    {name: ui.draggable.attr('id') + '_top', value: ui.position.top}
+                                    {name: ui.draggable.attr('id') + '_top', value: ui.position.top},
+                                    {name: ui.draggable.attr('id') + '_height', value: jQuery("#" + (ui.draggable.attr('id').replace(/\:/g, '\\:'))).height()}
                                 ]
                             };
 
@@ -64,7 +65,7 @@
                 <p:commandLink action="#{gestionClaseInteracController.agregarPantalla()}" update="clase">
                     <i class="icon-ascreen Fs25 Red MarRight10" style="cursor: pointer" title="Modificar tamaño de pantalla de clase"></i>
                 </p:commandLink>
-                
+
                 <p:commandLink action="#{gestionClaseInteracController.agregarPantalla()}" update="clase">
                     <i class="icon-add180 Fs25 Red MarRight10" style="cursor: pointer" title="Añadir Página a sección Actual"></i>
                 </p:commandLink>
@@ -169,6 +170,47 @@
                                                             <h:outputText id="archivosEvnt" escape="false" value="#{superComponente.texto}"/>
                                                         </c:when>
                                                     </c:choose>
+<!--                                                    
+                                                    evnt-click
+                                                    futuro1-for de eventos del mismo componente
+                                                    futuro2-for de relaciones --f_evento_nComponente_interacComp1
+                                                    o1.evtn->click-f1_1,f2_1--f_click_1_1
+                                                    subevtn->fade-f2_1,f3_1
+                                                    subevtn->shake-f3_1,f1_2
+                                                    o2.evtn->show-f1_2,f1_3
+                                                    o3.evtn->click,f1_3
+                                                    <c:set value="0" var="varID"></c:set>
+                                                    <c:set value="" var="siguienteEvento"></c:set>
+
+                                                    <c:forEach items="#{superComponente.interacciones}" var="acciones">
+                                                        <c:set value="#{varID+1}" var="varID"></c:set>
+                                                        <c:choose>
+                                                            <c:when test="#{varID>=superComponente.interacciones.size()}">
+                                                                <c:set value="" var="siguienteEvento"></c:set>
+                                                            </c:when>
+                                                            <c:otherwise>
+                                                                <c:set value=",func#{varID+1}" var="siguienteEvento"></c:set>
+                                                            </c:otherwise>
+                                                        </c:choose>
+                                                        <c:choose>
+                                                            <c:when test="#{acciones.idEvento.evCodigo=='show' and varID==1}">
+                                                                <script class="scripGen" type="text/javascript">
+                                                                    function func#{varID}() {
+                                                                        mediaEv = $(".multimedia");
+                                                                        mediaEv.show("#{acciones.idAccion.evCodigo}", #{acciones.inDuracion}#{siguienteEvento});
+                                                                    }
+                                                                </script>
+                                                            </c:when>
+                                                            <c:otherwise>
+                                                                <script class="scripGen" type="text/javascript">
+                                                                    function func#{varID}() {
+                                                                        mediaEv = $(".multimedia");//id de super componente actual
+                                                                        mediaEv.effect("#{acciones.idAccion.evCodigo}", #{acciones.inDuracion}#{siguienteEvento});
+                                                                    }
+                                                                </script>
+                                                            </c:otherwise>
+                                                        </c:choose>                                    
+                                                    </c:forEach>-->
                                                 </p:panel>
                                             </c:forEach>
                                         </p:panel>
